<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.baehw1107.poetical.MainActivity">

    <LinearLayout
        android:id="@+id/poem01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_list"
        android:clickable="true"
        android:onClick="displayPoem"
        android:orientation="vertical"
        android:tag="01">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_title"
            android:gravity="center"
            android:text="@string/title01"
            android:textColor="#61380B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author01"
            android:textColor="#22741C"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/body01"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/poem02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_list"
        android:clickable="true"
        android:onClick="displayPoem"
        android:orientation="vertical"
        android:tag="02">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_title"
            android:gravity="center"
            android:text="@string/title02"
            android:textColor="#61380B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author02"
            android:textColor="#22741C"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/body02"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2014111614 배혜원" />

</LinearLayout>
